# rust_csv_reader

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
samples/: people.csv
src/: app.rs  data.rs  gui.rs  lib.rs  main.rs  sql.rs  ui.rs
