[package]
name = "tessera"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
authors = ["rust_csv_reader contributors"]
description = "Tessera — an ultimate terminal viewer for CSV and Parquet files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sdrdx4100/rust_csv_reader"
keywords = ["csv", "parquet", "tui", "viewer", "arrow"]
categories = ["command-line-utilities"]

[lib]
name = "tessera"
path = "src/lib.rs"

[[bin]]
name = "tessera"
path = "src/main.rs"

[[bin]]
name = "tessera-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[dependencies]
ratatui = "0.30"
arrow = { version = "59", features = ["csv"] }
parquet = { version = "59", features = ["arrow"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
eframe = { version = "0.30.0", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"], optional = true }
egui_extras = { version = "0.30.0", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[features]
default = []
# Build the optional desktop GUI (`tessera-gui`) with: cargo build --features gui
gui = ["dep:eframe", "dep:egui_extras"]

